--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" type="text/css" href="dependencies/Semantic-UI-CSS-master/components/grid.css">
   <link rel="stylesheet" type="text/css" href="dependencies/Semantic-UI-CSS-master/components/header.css">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
 <body>
 
